# study_ai_master

./: dataset.csv  estimate_sigma_2.py  estimate_standard_deviation.py  markov_chain.ipynb  markov_chain.py  pick_gifts.py  predict_stock.py  predict_stock_rolling_avg.py  pyproject.toml  quick_histogram.py  solve_maze.py  tsp_genetic_algorithm.py
